# tailscale

./: .deepsource.toml  .dockerignore  .envrc  .gitattributes  .gitignore  .golangci.yml  .mockery.yaml  .policy-tests.yml  .policy.yml  ALPINE.txt  AUTHORS  BLUEPRINTS-CHECKLIST.md  BLUEPRINTS-FOLLOWUPS.md  BLUEPRINTS-NOTES.md  BLUEPRINTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.arm64v8  Dockerfile.base  Dockerfile.derp  LICENSE  Makefile  NEAR-STOCK-APPROACH.md  PATCH-TECHNICAL-DETAILS.md  PATENTS  PLAN.tsnet2.md  README-SOCKS5-PATCH.md  README.md  SECURITY.md  STOCK-TAILSCALE-TOR-APPROACH.md  TEST-RESULTS.md  TODO  VERSION  VERSION.txt  WIP.md  api.md  assert_ts_toolchain_match.go  build_dist.sh  build_docker.sh  (+35 more)
.bencher/: config.yaml
.github/: CONTRIBUTING.md  dependabot.yml  licenses.tmpl
appc/: appc.go  appc_test.go  appconnector.go  appconnector_test.go  conn25.go  conn25_datapath.go  conn25_flowtable.go  conn25_test.go  embedded.go  embedded_test.go  handlers.go  handlers_test.go  ippool.go  ippool_test.go  observe.go  observe_disabled.go
atomicfile/: atomicfile.go  atomicfile_notwindows.go  atomicfile_test.go  atomicfile_windows.go  atomicfile_windows_test.go  mksyscall.go  zsyscall_windows.go
block/: block.go  block_test.go
brew/: .gitignore  README.md  dl-tarball-sha.sh  generate-formula.sh  generate-formulae.sh  install-start-with-checks.sh  make-test-source-tarball.sh  search-interesting.sh  serve-tarball.sh  status.sh  up.sh  (+7 more)
tool/goexe/: .gitignore  Cargo.toml  Makefile
tool/goexe/.cargo/: config.toml
tool/goexe/src/: main.rs
(+4724 files in other folders)
