[package]
name = "go"
version = "0.1.0"
edition = "2024"

[dependencies]
windows-sys = { version = "0.61", features = [
    "Win32", 
    "Win32_System_LibraryLoader", 
    "Win32_System_Environment",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_SystemInformation",
    "Win32_System_IO",
    "Win32_System_Console",
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
